--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property ="og:title" content="My Word List" />
-    <meta property ="og:description" content="The greatest word list"/>
+    <meta property ="og:description" content="The fantastic word list, you can search any of word in this website"/>
     <meta property ="og:image" content="{{url_for('static', filename='logo_red.png')}}"/>
 
     <link rel="shortcut icon" href="{{url_for('static', filename='favico.ico')}}" type="image/x-icon"/>
